# OpenMemoryLabs-v1

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mypy.ini  oml.yaml  pyproject.toml  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  DEMO_SCRIPT.md  README.md  ROADMAP.md  TODO.md
notebooks/: teeg_demo.ipynb
oml/: __init__.py  cli.py  config.py  context_builder.py
oml/api/: __init__.py  schemas.py  server.py
oml/app/: __init__.py  chat.py  composer.py  ui.py
oml/eval/: __init__.py  ablations.py  base.py  budget.py  fact_checker.py  models.py  run.py
oml/ingest/: __init__.py  graph_extractor.py  pipeline.py  rebel_extractor.py  summarizer.py  t5_summarizer.py
oml/llm/: __init__.py  base.py  cache.py  factory.py  gemini.py  lmstudio.py  mock.py  ollama.py  openai.py  openrouter.py  smart_mock.py
oml/memory/: __init__.py  assembler.py  atomic_note.py  batcher.py  compressor.py  consolidate.py  consolidator.py  context.py  delta.py  evolver.py  factory.py  importance.py  prism_pipeline.py  protocol.py  sketch.py  teeg_pipeline.py  toon.py
oml/models/: __init__.py  events.py  schema.py
oml/retrieval/: __init__.py  base.py  bm25.py  graph_retriever.py  gtcc.py  hybrid.py  hyde.py  pipeline.py  provenance_index.py  rerank.py  scout.py  unified.py  vector.py
oml/storage/: __init__.py  base.py  chroma.py  events.py  factory.py  lancedb.py  memory.py  sqlite.py  teeg_store.py
oml/techniques/: __init__.py  protocols.py  registry.py
oml/utils/: __init__.py  device.py
reports/: BEST_SYSTEM_ARCHITECTURE.md  EXPERIMENTS.md  HYDE_STRATEGY.md  improvement_comparison.md
scripts/: README.md  api_demo.py  benchmark_models.py  eval_batched.py  eval_combinations.py  eval_frank.py  eval_lmstudio.py  mock_chat_events.py  prepare_wiki_docs.py  prism.py  run_event_audit.py  run_graph_experiment.py  run_hybrid_alpha_sweep.py  run_hyde_experiment.py  run_rdf_experiment.py  run_real_combinations.py  run_rerank_experiment.py  run_wiki_benchmark.py  simulate_chat.py  teeg.py  validate.py
scripts/utility/: debug_chroma.py  debug_lancedb.py  verify_chroma.py  verify_chroma_e2e.py  verify_chunks.py  (+2 more)
tests/: test_api.py  test_chunkers.py  test_cli.py  test_config.py  test_context_builder.py  test_cost_efficiency.py  test_eval_tasks.py  test_events.py  test_graph.py  test_gtcc.py  test_hybrid.py  test_llm_factory.py  test_memory_efficiency.py  test_new_llm_clients.py  test_prism.py  test_rdf.py  test_rebel_extractor.py  test_retrieval.py  test_t5_summarizer.py  test_teeg.py
(+27 files in other folders)
