[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oml"]

[project]
name = "openmemorylab"
version = "1.0.0"
description = "Token-efficient RAG & retrieval toolkit with eval suite, TEEG evolving-graph memory, and REST API."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "ManzilS" }]
keywords = ["rag", "llm", "retrieval", "memory", "knowledge-graph", "nlp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  # CLI
  "typer>=0.12.0",
  # Config / env
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  # Storage
  "SQLAlchemy>=2.0.0",
  # Retrieval — sparse + dense
  "rank-bm25>=0.2.2",
  "faiss-cpu>=1.7.4",
  "numpy>=1.26.0",
  # Embeddings + reranking
  "sentence-transformers>=3.0.0",
  "scikit-learn>=1.3.0",
  # ML models (T5 summarizer, REBEL extractor)
  "transformers>=4.30.0",
  "torch>=2.2.2",
  "sentencepiece>=0.1.99",
  "tokenizers>=0.15.0",
  "tqdm>=4.66.0",
  # Knowledge graph
  "networkx>=3.0",
  # Data / eval
  "pandas>=2.0.0",
  # Output formatting
  "rich>=13.7.0",
  # LLM providers (optional at runtime — imported lazily)
  "openai>=1.0.0",
  "google-genai>=0.1.0",
  # Data validation + REST API schemas
  "pydantic>=2.0.0",
  # Streamlit UI
  "streamlit>=1.30.0",
  # REST API server
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.urls]
Repository = "https://github.com/ManzilS/openmemorylab-main2"
Issues = "https://github.com/ManzilS/openmemorylab-main2/issues"

[project.scripts]
oml = "oml.cli:app"

[project.optional-dependencies]
dev = [
  # Testing
  "pytest>=8.0.0",
  "pytest-cov>=4.0.0",
  # API tests (async TestClient transport)
  "httpx>=0.27.0",
  # Semantic fact-checker tests
  "rdflib>=7.0.0",
  # Lint/format
  "ruff>=0.6.0",
  # Type checking
  "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["oml"]
omit = ["oml/app/ui.py"]   # Streamlit UI requires a running browser context

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70            # CI fails if coverage drops below 70 %

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["F"]
